Use malloc for segment allocation (#61)
* Use malloc for segment allocation

Signed-off-by: Gulshan <kumargu@amazon.com>

* Fix tests

Signed-off-by: Gulshan <kumargu@amazon.com>

---------

Signed-off-by: Gulshan <kumargu@amazon.com>